--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.8.6",
     "@mui/styled-engine-sc": "^5.8.0",
     "@mui/styles": "^5.9.3",
+    "@reduxjs/toolkit": "^1.8.4",
     "babel-preset-next": "^1.4.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
@@ -37,6 +38,7 @@
     "react-dom": "18.1.0",
     "react-hotjar": "^5.0.0",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.0.2",
     "react-search-box": "^2.2.1",
     "react-slick": "^0.29.0",
     "react-tooltip": "^4.2.21",
