integration with backend

--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@mui/styled-engine-sc": "^5.8.0",
     "@mui/styles": "^5.9.3",
     "@reduxjs/toolkit": "^1.8.4",
+    "axios": "^1.2.3",
     "babel-preset-next": "^1.4.0",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "font-awesome": "^4.7.0",
     "i": "^0.3.7",
